# Arsenyc

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
arsenal/: app.py
arsenal/modules/: common_sync.py  notion_sync.py  obsidian_sync.py
